--- a/Reactjs/11-form-handling/src/index.css
+++ b/Reactjs/11-form-handling/src/index.css
@@ -6,5 +6,18 @@ html,body{
   height: 100%;
   width: 100%;
   background-color: #222;
-  color: #fff;
+}
+input,button{
+  padding: 10px 5px;
+  margin: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+button{
+  background-color: #444;
+  color: white;
+}
+button:hover{
+  background-color: #555;
 }
